# Articulated-Rigid-Body

./: AGENTS.md  BABInertia.h  BAdjoint.h  BAutodiff.h  BBody.cpp  BBody.h  BDynamics.cpp  BDynamics.h  BFixedBody.h  BFunctions.h  BInertia.h  BJoint.cpp  BJoint.h  BMatrix6.h  BMatrix63.h  BModel.cpp  BModel.h  BProducts.h  BRBInertia.h  BResultAnalysis.h  BSpatialAlgebra.h  BSpatialInertia.cpp  BSpatialInertia.h  BSpatialMatrix.h  BSpatialTransform.h  BSpatialTypes.h  BSpatialVector.h  BTransform.h  BVector.h  BVector6.h  CBody.cpp  CBody.h  CMakeLists.txt  LICENSE  README.md  main.cpp
Checks/: BSpatialChecks.cpp  BSpatialChecks.h  BSpatialRandom.cpp  BSpatialRandom.h  CMakeLists.txt  URand.h
Collisions/: ABody.h  BBox.h  BCollider.cpp  BCollider.h  BContact.h  BContactManager.cpp  BContactManager.h  BGJK.cpp  BGJK.h  BPolytope.h  BPolytopeLoader.cpp  BPolytopeLoader.h  CMakeLists.txt
Model/: AMatrix.h  BBody.h  BDynamics.cpp  BDynamics.h  BFixedBody.h  BJoint.cpp  BJoint.h  BModel.cpp  BModel.h  CMakeLists.txt
OpenGJK/: ABody.h  BCollider.cpp  BCollider.h  BContact.h  BContactManager.h  BGJK.h  BOpenEPA.cpp  BOpenEPA.h  BOpenGJK.cpp  BOpenGJK.h  BPolytope.h  BSimplex.h  CMakeLists.txt  README.md
SpatialAlgebra/: BABInertia.h  BAdjoint copy.h  BAdjoint.h  BAutodiff.h  BExpLog.h  BExponential.h  BFunctions.h  BInertia.h  BMatrix6.h  BMatrix63.h  BProducts.h  BRBInertia.h  BSpatialAlgebra.h  BSpatialTypes.h  BStream.h  BTransform.h  BVector6.h  CMakeLists.txt
URDF/: CMakeLists.txt  URDFManager.cpp  URDFManager.h  URDFReader.cpp  URDFReader.h  URDFTypes.cpp  URDFTypes.h  URDFWriter.cpp  URDFWriter.h  check.sh  error.txt
URDF/Examples/: README.md  kuka_iiwa7.urdf  r1.urdf  tmp.urdf
